--- a/templates/messages.html
+++ b/templates/messages.html
@@ -102,7 +102,7 @@
                         rows="1"
                         maxlength="2000"
                         disabled></textarea>
-                    <button class="btn-emoji" title="Insérer un emoji">
+                    <button class="btn-emoji" onclick="toggleEmojiPicker()" title="Insérer un emoji">
                         <i class="fas fa-smile"></i>
                     </button>
                 </div>
